force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Batch No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>