force-app/main/default/objects/Batch__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Uploaded File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>