force-app/main/default/objects/Batch__c/fields/Consent_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Consent_Emails_Sent__c</fullName>
    <label>Consent Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>