force-app/main/default/objects/Batch__c/fields/Consent_Links_Generated__c.field-meta.xml
<CustomField>
    <fullName>Consent_Links_Generated__c</fullName>
    <label>Consent Links Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>