force-app/main/default/objects/Batch__c/fields/Consent_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status_Summary__c</fullName>
    <label>Consent Status Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>