force-app/main/default/objects/Batch__c/fields/Do_Not_Contact_Records__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Records__c</fullName>
    <label>Do Not Contact Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>