force-app/main/default/objects/Batch__c/fields/Duplicate_Records__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Records__c</fullName>
    <label>Duplicate Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>