force-app/main/default/objects/Batch__c/fields/Email_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Link_Status__c</fullName>
    <label>Email Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Generated</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>