force-app/main/default/objects/Batch__c/fields/Failed_Validation_Records__c.field-meta.xml
<CustomField>
    <fullName>Failed_Validation_Records__c</fullName>
    <label>Failed Validation Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>