force-app/main/default/objects/Batch__c/fields/Pending_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Pending_Upload_Status__c</fullName>
    <label>Pending Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>