force-app/main/default/objects/Batch__c/fields/Reminder_Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Review_Period__c</fullName>
    <label>Reminder Review Period(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>