force-app/main/default/objects/Batch__c/fields/Validated_Records__c.field-meta.xml
<CustomField>
    <fullName>Validated_Records__c</fullName>
    <label>Validated Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>